# Contract-RAG-System

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  contract_rag.db  docker-compose.yml  pyproject.toml  run.sh
contract_rag/: config.py  config.yaml  llm.py
docker/: entrypoint.sh
docs/: INTERFACE.md  UI_SPEC.md  pencil-new.pen
evals/: compare.py  dataset.py  dataset_2026004.jsonl  dataset_cross_contract_sets.jsonl  dataset_cuad_gold.jsonl  dataset_injection.jsonl  dataset_multihop.jsonl  dataset_open_retrieval.jsonl  dataset_sql_gated_agent.jsonl  feedback_gold.py  injection.py  metrics.py  multihop.py  ragas_support.py  report.py  run_agent_compare.py  run_baseline_vs_agent.py  run_cross_contract_sets.py  run_eval.py  run_grid.py  run_injection.py  run_multihop.py  run_open_retrieval.py  run_reranker_compare.py  run_reranker_cuad.py  run_sql_gated_agent_compare.py  token_tracker.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
memory/: MEMORY.md  digital_parsing_evaluation.md  embedding_pitfalls.md  ingestion_pipeline.md  ocr_evaluation.md  pdf_parsing.md  retrieval_eval.md
scripts/: build_cuad_gold.py  feedback_to_gold.py  ingest_cuad.py  init_corpus.py
tests/: test_approval.py  test_assembly.py  test_chunk_cleaning.py  test_chunk_ids.py  test_chunk_overlap.py  test_chunker_enriched.py  test_config_models.py  test_config_retrieval.py  test_contract_versions.py  test_cuad_metadata.py  test_excel_adapter.py  test_file_no.py  test_image_enrichment.py  test_llm_model.py  test_merge.py  (+9 more)
(+145 files in other folders)
