[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
    "chromadb>=1.5.8",
    "cryptography>=46.0.7",
    "google-cloud-documentai>=3.14.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-google-vertexai>=3.2.2",
    "langchain-openai>=1.1.14",
    "langchain-weaviate>=0.0.6",
    "langgraph>=1.1.8",
    "mineru[pipeline]>=3.1.15",
    "opencv-python-headless>=4.13.0",  # MinerU pipeline backend needs cv2; not pulled transitively
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.5.0",
    "transformers>=4.57.3,<5",
    "unstructured[pdf]>=0.18.32",
    "weaviate-client>=4.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
